# Texte-Messenger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  alternate_client.py  alternate_server.py  client.py  pyproject.toml  server.py
.devcontainer/: Dockerfile  devcontainer.json  start-showcase.sh
.github/workflows/: ci.yml
docs/: code-tour.md  correctness.md  protocol.md  showcase.md  tutorial.md
examples/: README.md  two_client_demo.py
examples/expected/: tcp-demo.txt  udp-demo.txt
tests/: test_chat_room.py  test_client_smoke.py  test_examples.py  test_protocol.py  test_server_routing.py  test_showcase.py  test_themes.py  test_ui_source.py
texte/: __init__.py  __main__.py  chat_room.py  client.py  client_support.py  glass.py  protocol.py  server.py  showcase.py  themes.py  ui.py  widgets.py
